Fix background image sizing on mobile browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ Blue: rgb(8, 126, 215);
 html {
 	background: url("../img/bernie-sanders.jpg") no-repeat center center fixed;
 	background-size: cover;
+	height: 100%;
 }
 
 body {
